cluster/chrony/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrony-deployment
  namespace: chrony
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrony
  template:
    metadata:
      labels:
        app: chrony
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                # when possible, run on the network controller
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - network
      containers:
        - env:
            - name: NTP_SERVERS
              value: time.cloudflare.com
            - name: ENABLE_NTS
              value: "true"
            - name: LOG_LEVEL
              value: "0"
            - name: ENABLE_SYSCLK
              value: "true"
          # registry-proxy image-prefix
          image: cr.nathanv.app/ghcr.io/dockur/chrony:4.6.1
          name: chrony
          securityContext:
            capabilities:
              add:
                - SYS_TIME
          ports:
            - containerPort: 123
              protocol: UDP
